# CodeCraft

./: .gitignore  BADCASES.md  CLAUDE.md  CRAFT.md  DIRECT_ARCHITECTURE_COMPLETE.md  FAILURE_ANALYSIS.md  GEMINI.md  MIGRATION_STATUS.md  PLUGGABLE_TOOLS_MIGRATION_COMPLETE.md  README.md  TECH_PLAN.md  TESTING_COMPLETE.md  TEST_RESULTS_FINAL.md  demo-eval.ts  final-refactor.py  fix-test-expectations.py  index.js  index.ts  llm-eval-results.json  math.test.ts  package-lock.json  package.json  run-all-evals.ts  run_all_evals.ts  test_struct.rs  vitest.config.ts  vitest.e2e.config.ts  vitest.setup.ts
docs/: ARCHITECTURE.md  E2E_TESTING_GUIDE.md  MANUAL_TESTING_GUIDE.md  MASTER_PLAN.md  PLUGGABLE_TOOLS_ARCHITECTURE.md  PLUGGABLE_TOOLS_DEEP_DIVE.md  README.md  ROADMAP.md  TESTING.md  TEST_PLANS.md  TEST_PLAN_TEMPLATE.md  TOOLS_EVALUATION_DEEP_DIVE.md  TOOLS_EVALUATION_IMPLEMENTATION_PLAN.md  TOOLS_EVALUATION_SYSTEM.md  TOOLS_IMPROVEMENT_PLAN.md  TOOLS_OPTIMIZATION_COMPLETE.md  TOOLS_SIMPLIFIED.md
evals/: run-all-evals.ts  run-bash-evals.ts  run-llm-evals.ts
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs
scripts/: careful-refactor.py  fix-dataset-tool-names.py  fix-rust-tools.sh
src/: agent.ts  context_manager.ts  error-recovery.ts  error_formatter.ts  error_recovery.ts  intent_classifier.ts  llm.ts  lru_cache.ts  planning-engine.ts  planning_engine.ts  system-prompt-template.ts  tool-executor.ts  tool-result-formatter.ts  tool-setup.ts  tool_context.ts  tool_registry.ts  tool_setup.ts  tools.ts
test-plans/: IMPLEMENTATION_SUMMARY.md  README.md  bash-tools.md  (+3 more)
(+199 files in other folders)
