[package]
edition = "2021"
name = "rust_engine"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
walkdir = "2.3.2"
regex = "1.6.0"
tree-sitter = "0.20.10"
tree-sitter-typescript = "0.20.2"
tree-sitter-rust = "0.20.4"
fuzzy-matcher = "0.3.7"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
